[package]
name = "malefic-pulse"
version = "0.1.1"
edition = "2021"

[lib]
name = "malefic_pulse"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "malefic-pulse"
path = "src/main.rs"

[features]
default = []

shellcode = []

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
codegen-units = 1