[package]
name = "malefic"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
name = "malefic_dll"
path = "src/lib.rs"

[features]
default = ["beacon", "runtime_tokio"]
bind = ["malefic-core/bind"]
beacon = []

secure = ["malefic-proto/secure"]

# runtime

runtime = ["malefic-core/async_scheduler"]
runtime_asyncstd = ["runtime", "malefic-core/async-std"]
runtime_tokio = ["runtime", "malefic-core/tokio", "tokio"]
runtime_smol = ["runtime", "malefic-core/smol"]

anti_sandbox = ["malefic-helper/anti_sandbox"]
anti_vm = ["malefic-helper/anti_vm"]

# guardrail
guardrail = ["regex"]

[dependencies]
cfg-if = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
obfstr = { workspace = true }
regex = { workspace = true, optional = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"], optional = true }

malefic-core = { path = "../malefic-core", features = [ "default" ] }
malefic-helper = { path= "../malefic-helper", features = [ "default" ] }
malefic-proto = { path = "../malefic-proto" }
malefic-prelude = { path = "../malefic-prelude", optional = true}

[build-dependencies]
lazy_static = { workspace = true }
embed-resource = { workspace = true }

