[package]
name = "malefic-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = ["crypto_aes"]

crypto = []
crypto_xor = ["crypto"]
crypto_aes = ["crypto", "aes", "ctr"]
crypto_chacha20 = ["crypto", "chacha20"]

secure = ["age"]

[dependencies]
thiserror = { workspace = true }
cfg-if = { workspace = true }
snap = "1.1.1"
chacha20 = { version = "0.9.0", optional = true }
aes = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }
age = { workspace = true, optional = true }
