[package]
name = "malefic-net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
malefic-common = { workspace = true }
malefic-gateway = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
byteorder = { workspace = true }
