[package]
name = "malefic-process"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-process = { workspace = true }
malefic-common = { workspace = true }
malefic-gateway = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Wdk_System_Threading",
    "Wdk_System",
] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
